# climate-function-helpers

./: .gitignore  README.md  climaccf_config_user.yml  pyproject.toml  requirements.txt
src/: compute_emissions.py  era5_to_climate_impact.py  hotspot_computation.py  pipelines.py
src/lib/: trajectory_construction.py
